deploy/workflow-manager/templates/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: routes
  namespace: workflow-manager
spec:
  routes:                          
  - kind: Rule
    match: PathPrefix(`/workflows`) && Host(`workflow-manager.local`)
    services:                       
    - kind: Service
      name: workflow-manager
      port: 8080
  - kind: Rule
    match: PathPrefix(`/executions`) && Host(`workflow-manager.local`) && Method(`POST`)
    services:                       
    - kind: Service
      name: workflow-manager
      port: 8080
